force-app/main/default/objects/Change_of_Circumstance__c/Change_of_Circumstance__c.object-meta.xml
<CustomObject>
    <label>Change of Circumstance</label>
    <nameField>
        <displayFormat>COC-{0000}</displayFormat>
        <label>Change of Circumstance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change of Circumstance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>