force-app/main/default/objects/Change_of_Circumstance__c/fields/Amount_of_Days_Extended__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Days_Extended__c</fullName>
    <label>Amount of Days Extended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>