force-app/main/default/objects/Change_of_Circumstance__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Appraisal</fullName>
            </value>
            <value>
                <fullName>Condo Docs</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>HOI</fullName>
            </value>
            <value>
                <fullName>IBTS</fullName>
            </value>
            <value>
                <fullName>Lien</fullName>
            </value>
            <value>
                <fullName>Post Close Cure</fullName>
            </value>
            <value>
                <fullName>Termite/Pest Inspection</fullName>
            </value>
            <value>
                <fullName>VOE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>