force-app/main/default/objects/Change_of_Circumstance__c/fields/CD_Eligible_Date__c.field-meta.xml
<CustomField>
    <fullName>CD_Eligible_Date__c</fullName>
    <label>CD Eligible Date</label>
    <type>Date</type>
</CustomField>