force-app/main/default/objects/Change_of_Circumstance__c/fields/CD_Signed__c.field-meta.xml
<CustomField>
    <fullName>CD_Signed__c</fullName>
    <label>CD Signed</label>
    <type>Date</type>
</CustomField>