force-app/main/default/objects/Change_of_Circumstance__c/fields/Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Date__c</fullName>
    <inlineHelpText>Date we learned about the change</inlineHelpText>
    <label>Change Date</label>
    <type>Date</type>
</CustomField>