force-app/main/default/objects/Change_of_Circumstance__c/fields/COC_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>COC_Completion_Date__c</fullName>
    <label>COC Completion Date</label>
    <type>Date</type>
</CustomField>