force-app/main/default/objects/Change_of_Circumstance__c/fields/COC_Specialist__c.field-meta.xml
<CustomField>
    <fullName>COC_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>COC Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Change of Circumstances</relationshipLabel>
    <relationshipName>Change_of_Circumstances</relationshipName>
    <type>Lookup</type>
</CustomField>