force-app/main/default/objects/Change_of_Circumstance__c/fields/Compliance_Ease_Result__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Ease_Result__c</fullName>
    <label>ComplianceEase Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Minimal</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>