force-app/main/default/objects/Change_of_Circumstance__c/fields/LE_COC_Sent__c.field-meta.xml
<CustomField>
    <fullName>LE_COC_Sent__c</fullName>
    <label>LE COC Sent</label>
    <type>Date</type>
</CustomField>