force-app/main/default/objects/Change_of_Circumstance__c/fields/LE_Disclosure_Type__c.field-meta.xml
<CustomField>
    <fullName>LE_Disclosure_Type__c</fullName>
    <label>LE Disclosure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>E-Sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>