force-app/main/default/objects/Change_of_Circumstance__c/fields/LE_Signed__c.field-meta.xml
<CustomField>
    <fullName>LE_Signed__c</fullName>
    <label>LE Signed</label>
    <type>Date</type>
</CustomField>