force-app/main/default/objects/Change_of_Circumstance__c/fields/Lock_Period__c.field-meta.xml
<CustomField>
    <fullName>Lock_Period__c</fullName>
    <label>Lock Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>45 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>