force-app/main/default/objects/Change_of_Circumstance__c/fields/New_Appraised_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Appraised_Value__c</fullName>
    <label>New Appraised Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>