force-app/main/default/objects/Change_of_Circumstance__c/fields/New_Base_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Base_Loan_Amount__c</fullName>
    <label>New Base Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>