force-app/main/default/objects/Change_of_Circumstance__c/fields/New_FICO__c.field-meta.xml
<CustomField>
    <fullName>New_FICO__c</fullName>
    <label>New FICO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>