force-app/main/default/objects/Change_of_Circumstance__c/fields/New_Investor__c.field-meta.xml
<CustomField>
    <fullName>New_Investor__c</fullName>
    <label>New Investor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UWM</fullName>
            </value>
            <value>
                <fullName>Planet</fullName>
            </value>
            <value>
                <fullName>Huntington</fullName>
            </value>
            <value>
                <fullName>Carrington</fullName>
            </value>
            <value>
                <fullName>Equity Prime</fullName>
            </value>
            <value>
                <fullName>Nations Direct</fullName>
            </value>
            <value>
                <fullName>Deephaven</fullName>
            </value>
            <value>
                <fullName>PennyMac</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>