force-app/main/default/objects/Change_of_Circumstance__c/fields/New_Lock_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Lock_Expiration_Date__c</fullName>
    <label>New Lock Expiration Date</label>
    <type>Date</type>
</CustomField>