force-app/main/default/objects/Change_of_Circumstance__c/fields/New_Program__c.field-meta.xml
<CustomField>
    <fullName>New_Program__c</fullName>
    <label>New Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>