force-app/main/default/objects/Change_of_Circumstance__c/fields/New_Rate__c.field-meta.xml
<CustomField>
    <fullName>New_Rate__c</fullName>
    <label>New Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>