force-app/main/default/objects/Change_of_Circumstance__c/fields/New_Term__c.field-meta.xml
<CustomField>
    <fullName>New_Term__c</fullName>
    <label>New Term</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>