force-app/main/default/objects/Change_of_Circumstance__c/fields/Other_Reason_for_COC__c.field-meta.xml
<CustomField>
    <fullName>Other_Reason_for_COC__c</fullName>
    <label>Other Reason for COC</label>
    <type>TextArea</type>
</CustomField>