force-app/main/default/objects/Change_of_Circumstance__c/fields/Reason_for_Change__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Change__c</fullName>
    <label>Reason(s) for Change</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Loan Amount</fullName>
            </value>
            <value>
                <fullName>Appraisal/LTV</fullName>
                <label>Appraisal Value / LTV</label>
            </value>
            <value>
                <fullName>Rate Change</fullName>
                <label>Interest Rate Change</label>
            </value>
            <value>
                <fullName>Term</fullName>
                <label>Loan Term Change</label>
            </value>
            <value>
                <fullName>Float Down</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
                <label>Lock Extension</label>
            </value>
            <value>
                <fullName>Program Change</fullName>
                <label>Loan Program Change</label>
            </value>
            <value>
                <fullName>Float to Lock</fullName>
            </value>
            <value>
                <fullName>Restructure</fullName>
            </value>
            <value>
                <fullName>Investor Change</fullName>
                <label>Investor / Lender Change</label>
            </value>
            <value>
                <fullName>FICO</fullName>
                <label>Credit / FICO Change</label>
            </value>
            <value>
                <fullName>Purchase Price Change</fullName>
            </value>
            <value>
                <fullName>Borrower Change</fullName>
                <label>Borrower / Co-Borrower Change</label>
            </value>
            <value>
                <fullName>Property Change</fullName>
            </value>
            <value>
                <fullName>Occupancy Change</fullName>
            </value>
            <value>
                <fullName>Income Employment Change</fullName>
                <label>Income / Employment Change</label>
            </value>
            <value>
                <fullName>Assets Reserves Change</fullName>
                <label>Assets / Reserves Change</label>
            </value>
            <value>
                <fullName>Closing Date Change</fullName>
            </value>
            <value>
                <fullName>Fees Costs Change</fullName>
                <label>Fees / Costs Change</label>
            </value>
            <value>
                <fullName>Seller Credit Change</fullName>
            </value>
            <value>
                <fullName>Insurance Taxes HOA Change</fullName>
                <label>Insurance / Taxes / HOA Change</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>