force-app/main/default/objects/Change_of_Circumstance__c/fields/Reason_for_Restructure__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Restructure__c</fullName>
    <label>Reason for Restructure</label>
    <type>TextArea</type>
</CustomField>