force-app/main/default/objects/Change_of_Circumstance__c/fields/Submitted_To_Investor__c.field-meta.xml
<CustomField>
    <fullName>Submitted_To_Investor__c</fullName>
    <label>Submitted To Investor</label>
    <type>Date</type>
</CustomField>