force-app/main/default/objects/Change_of_Circumstance__c/fields/Transaction__c.field-meta.xml
<CustomField>
    <fullName>Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Change of Circumstance</relationshipLabel>
    <relationshipName>Change_of_Circumstance</relationshipName>
    <type>Lookup</type>
</CustomField>