force-app/main/default/objects/Change_of_Circumstance__c/fields/Type_of_Change__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Change__c</fullName>
    <label>Type of Change</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LE COC</fullName>
            </value>
            <value>
                <fullName>CD COC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>